# specialized_intra_process_comm

./: README.md
notification_msgs/: CMakeLists.txt  package.xml
notification_msgs/msg/: Notification.msg
specialized_intra_process/: CMakeLists.txt  package.xml
specialized_intra_process/include/specialized_intra_process/: create_intra_process_buffer.hpp  create_intra_process_publisher.hpp  create_intra_process_subscription.hpp  intra_process_buffer_type.hpp  intra_process_manager.hpp  publisher.hpp  publisher_base.hpp  publisher_wrapper.hpp  publisher_wrapper_base.hpp  specialized_intra_process.hpp  subscription.hpp  subscription_base.hpp  subscription_wrapper.hpp  subscription_wrapper_base.hpp  typed_subscription_wrapper_base.hpp
specialized_intra_process/include/specialized_intra_process/buffers/: buffer_implementation_base.hpp  intra_process_buffer.hpp  ring_buffer_implementation.hpp
specialized_intra_process/src/: intra_process_manager.cpp  normal.cpp  publisher_base.cpp  publisher_wrapper_base.cpp  subscription_base.cpp  subscription_wrapper_base.cpp  test.cpp
specialized_intra_process_comm/: CMakeLists.txt  package.xml
specialized_intra_process_comm/include/specialized_intra_process_comm/: create_intra_process_subscription.hpp  intra_process_buffer_type.hpp  ros_message_publisher.hpp  subscription.hpp  typed_subscription.hpp
specialized_intra_process_comm/include/specialized_intra_process_comm/buffers/: ring_buffer_implementation.hpp
specialized_intra_process_comm/src/: intra_process_manager.cpp  publisher_base.cpp  subscription_base.cpp
specialized_intra_process_demo/: CMakeLists.txt  package.xml
specialized_intra_process_demo/src/: cyclic_pipeline.cpp  debug_interface.cpp  talker_listener.cpp  talker_listener_with_allocator.cpp
